--- a/src/android/anyline.gradle
+++ b/src/android/anyline.gradle
@@ -13,7 +13,9 @@ dependencies {
 
 android {
 
-  ndkVersion '21.4.7075529'
+    compileSdkVersion 30
+    buildToolsVersion '30.0.0'
+    ndkVersion '21.3.6528147'
 
   defaultConfig {
       ndk {
